@startuml
skinparam style strict
skinparam classAttributeIconSize 0

title Diagrama de Clases - Moneo MVP (KMP Shared Module)

package "Entities (Room)" as ENT {
    skinparam packageStyle rectangle
    skinparam borderColor #1B4F72

    class Account {
      + <color:#1D8348><b>id</b></color>: Long <<PK>>
      --
      + name: String
      + initial_balance: Double
      + currency_code: String
      + is_active: Boolean
    }

    class Category {
      + <color:#1D8348><b>id</b></color>: Long <<PK>>
      --
      + name: String
      + icon_id: Int
      + type: Int (1|2)
    }

    class Transaction {
      + <color:#1D8348><b>id</b></color>: Long <<PK>>
      + <color:#1B4F72><b>account_id</b></color>: Long <<FK>>
      + <color:#1B4F72><b>category_id</b></color>: Long <<FK>>
      --
      + amount: Double
      + type: Int (1|2)
      + description: String
      + date: Long
    }
}

package "DAOs" as DAO {
    skinparam borderColor #1D8348

    interface AccountDao {
      + getAccountBalance(id: Long): Flow<Double>
      + getAllAccounts(): Flow<List<Account>>
      + insert(account: Account)
    }

    interface CategoryDao {
      + getAllCategories(): Flow<List<Category>>
    }

    interface TransactionDao {
      + insert(transaction: Transaction)
      + getRecentTransactions(): Flow<List<Transaction>>
    }
}

package "Repositories" as REPO {
    skinparam borderColor #B7950B

    interface AccountRepository {
      + getAccountBalanceFlow(id: Long): Flow<Double>
      + getTotalConsolidatedBalance(): Flow<Double>
      + addAccount(account: Account)
    }

    interface TransactionRepository {
      + addTransaction(transaction: Transaction)
      + getRecentTransactionsFlow(): Flow<List<Transaction>>
    }
}

Account "1" -- "N" Transaction : contiene >
Category "1" -- "N" Transaction : clasifica >

AccountRepository ..> AccountDao : usa >
TransactionRepository ..> TransactionDao : usa >
TransactionRepository ..> AccountDao : usa para saldo >

AccountRepository ..> Account : devuelve >
TransactionRepository ..> Transaction : devuelve >

@enduml
